--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -1,105 +1,169 @@
-.topbar .custom_fill_left
-{
-    background-color: #0098d1;
-  background-color: #0098d1;
-  background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#0098d1), to(#0098d1));
-  background-image: -moz-linear-gradient(top, #0098d1, #0098d1);
-  background-image: -ms-linear-gradient(top, #0098d1, #0098d1);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));
-  background-image: -webkit-linear-gradient(top, #0098d1, #0098d1);
-  background-image: -o-linear-gradient(top, #0098d1, #0098d1);
-  background-image: linear-gradient(top, #0098d1, #0098d1);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0098d1', endColorstr='#0098d1', GradientType=0);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-   
-    
-
-}
-
-.topbar .custom_fill_right
-{
-    background-color: #00aeef;
-  background-color: #00aeef;
-  background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#00aeef), to(#00aeef));
-  background-image: -moz-linear-gradient(top, #00aeef, #00aeef);
-  background-image: -ms-linear-gradient(top, #00aeef, #00aeef);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));
-  background-image: -webkit-linear-gradient(top, #00aeef, #00aeef);
-  background-image: -o-linear-gradient(top, #00aeef, #00aeef);
-  background-image: linear-gradient(top, #00aeef, #00aeef);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00aeef', endColorstr='#00aeef', GradientType=0);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-    
-}
-
 body{
-    
+	margin: 0;
     background-color: #d7f0fc;
     min-height:100%;
-
+    font-family: Arial,sans-serif;
+    font-size: 12px;
 }
 
-nav.nav-side li{
-    list-style: none;
+.container {
+    width: 960px;
+    margin: auto;
+    padding: 0px;
 }
 
-header img{
-    margin-left: 10px;
+.banner {
+	position:relative;
+	background: #33aaed url('../images/banner.png') no-repeat;
+	width: 100%;
+	height:91px;
+	border-bottom: solid 3px #bbd8e7;
 }
 
-.sidebar{
+.content {
+    float: right;
+    width: 740px;
 }
 
-div.intro{
-    padding: 15px;
+.brand {
+    display:none;
 }
-div.join{
-    padding: 10px;
+
+.tagline {
+	position:absolute;
+	bottom: 2px;
+	left: 21em;
+	font-size: 8px;
+	color: white;
 }
+
+.sidebar {
+	width: 200px;
+}
+
 .nav-side ul{
-list-style-type: none;
-margin: 0;
-padding: 0;
-width: 220px; /* width of menu */
-}
-.colorize{
-    color: #a0dcf7;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background: url("../images/drop_shadow.png") repeat-y;
+    padding-left:15px;
 }
 
 .nav-side ul li{
-    list-style-image:  url("../images/signal.png");
+    list-style-image:  url("../images/list_style.png");
+    height: 27px;
     margin-left:20px;
+    padding-top: 6px;
 }
-.nav-side ul li a{
 
+.nav-side ul li a{
     display: block;
     width: auto;
     color:#333;
-
-    padding: 5px 0; /* Vertical (top/bottom) padding for each menu link */
-    text-indent: 8px;
+    padding: 5px 0;
     text-decoration: none;
     cursor: pointer;
 }
 
 .nav-side ul li a:hover{
-    border-bottom: 1px solid #f6eded; /*bottom border of menu link during hover. Should be equal or darker to link's hover's bgcolor*/
+    border-bottom: 1px solid #f6eded;
 }
 
-footer{
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-}
-table td{
-
+.intro {
+	font-size: 10px;
+	padding-left: 15px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 }
 
+.join {
+    padding-left: 30px;
+    padding-bottom: 30px;
+}
 
+.quotebox {
+    margin-left: 15px;
+    width: 148px;
+    height: 115px;
+    background: url('../images/quote_box_bg.png') no-repeat;
+    position: relative;
+    padding: 10px;
+}
 
+.title, .topquote {
+    color: white;
+}
+
+.title {
+    width: 70px;
+    left:0;
+    top:0;
+}
+
+.topquote {
+	position: absolute;
+	right: 0;
+	top: 10px;
+	width: 90px;
+}
+
+.bottomquote {
+	position: absolute;
+	top: 74px;
+	height: 46px;
+	overflow: hidden;
+}
+
+.quoted {
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+	color: grey;
+	font-size: 11px;
+}
+
+.footer {
+    clear: both;
+    width: 100%;
+}
+
+.sponsors {
+    height: 45px;
+    background-color: #00aeef;
+    color: white;
+    height: 35px;
+    margin-top: 20px;
+    padding-left: 50px;
+    padding-top: 10px;
+}
+
+.sponsors img {
+    vertical-align:top
+}
+
+.footerlinks {
+    text-align: center;
+    background-color: #d7f0fc;
+    color: grey;
+}
+
+.footerlinks ul {
+    list-style: disc outside none;
+}
+
+.footerlinks ul li {
+	display: inline;
+}
+
+.footerlinks ul li:before {
+    content: " | ";
+    color: black;
+}
+
+.footerlinks ul li.first:before {
+    content: "";
+}
+
+.footerlinks ul, .footerlinks p {
+    margin: 0;
+}
