more graphics and templates

--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -34,7 +34,7 @@
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">POLL RESULTS</a></li>
                 <li><a href="#">ABOUT UREPORT</a></li>
-                <li><a href="#">HOW TO JOIN</a></li>
+                <li><a href="/join/">HOW TO JOIN</a></li>
                 </ul>
             </div>
             <div class="intro">
