--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -31,7 +31,7 @@
         <div class="sidebar">
             <div class="nav-side">
                 <ul>
-                <li><a href="#">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="#">POLL RESULTS</a></li>
                 <li><a href="#">ABOUT UREPORT</a></li>
                 <li><a href="/join/">HOW TO JOIN</a></li>
