--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -2,6 +2,46 @@
 {% block page_title %} About Ureport {% endblock %}
 {% block content %}
 <div class="about"">
-    <h3>About Ureport <img src=""</h3>
+    <h3>About Ureport <img src=""/></h3>
+
+
+    <div class="page">
+    <p>
+        Ureport is a free SMS-based system that allows
+        young Ugandans to speak out on what's happening in
+        communities across the country, and work together
+        with other community leaders for positive change.
+    </p>
+    <div class="pointers">
+        <h3>Ureport is made up of:</h3>
+        <ul>
+            <li>
+                Weekly SMS messages and polls to and from
+                a growing community of Ureporters
+            </li>
+            <li>
+                Regular radio programs that will broadcast
+                stories gathered by Ureport
+            </li>
+            <li>
+                Newspaper articles that will publish stories from
+                the Ureport community.
+            </li>
+        </ul>
     </div>
+    <div class="mission">
+        <h3>The mission of Ureport</h3>
+        <p>
+            Inspire action within our communities to unite
+            and share the responsibility of creating a better
+            environment for eveyone.<br/>
+            Inspire action from our leaders - let them know
+            what's going on and what action your community wants.<br/>
+            Share info that Ureport gathers through different
+            mediums (radio, TV, community dialogue, website,
+            and youth events)
+        </p>
+    </div>
+</div>
+
 {%endblock%}
