--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -2,7 +2,7 @@
 {% block page_title %} About Ureport {% endblock %}
 {% block content %}
 <div class="about"">
-    <h3>About Ureport <img src=""/></h3>
+    <h3 class="about_header">About Ureport <img src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
 
 
     <div class="page">
@@ -43,5 +43,5 @@
         </p>
     </div>
 </div>
-
+</div>
 {%endblock%}
