--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -1,9 +1,8 @@
 {% extends "ureport_layout.html" %}
 {% block page_title %} About Ureport {% endblock %}
 {% block content %}
-<div class="about"">
+<div class="about">
     <h3 class="about_header">About Ureport <img src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
-
 
     <div class="page">
     <p>
@@ -42,6 +41,16 @@
             and youth events)
         </p>
     </div>
+    <div class="why-join">
+        <h3>Why Join Ureport</h3>
+        <ul>
+            <li>Speak out on what's happening in your community</li>
+            <li>Use Ureport results and information to update and increase citizen's awareness</li>
+            <li>Participate in nationwide campaigns to help improve your country</li>
+            <li>Share what's happening around Uganda with other Ureporters </li>
+        </ul>
+    </div>
+
 </div>
-</div>
+
 {%endblock%}
