--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -50,7 +50,7 @@
             <li>Share what's happening around Uganda with other Ureporters </li>
         </ul>
     </div>
-
+    </div>
 </div>
 
 {%endblock%}
