fixes to home page for all poll visualizations to look nice

--- a/ureport/templates/ureport/partials/viz/best_visualization.html
+++ b/ureport/templates/ureport/partials/viz/best_visualization.html
@@ -3,7 +3,7 @@
 CURRENT POLL
 </span>
 <span class="poll-date">
- - {{ poll.start_date|date:"d-M-Y" }} : 
+ - {{ poll.start_date|date:"d/M/Y" }} : 
 </span>
 <span class="poll-question">
 {{ poll.question }}
