--- a/ureport/templates/ureport/partials/viz/histogram.html
+++ b/ureport/templates/ureport/partials/viz/histogram.html
@@ -1,4 +1,4 @@
-<div id="visual_{{ poll.pk }}" style="width:500px">
+<div id="visual_{{ poll.pk }}" style="width:100%">
     <div id="bar_{{ poll.pk }}">
     </div>
 </div>
