--- a/ureport/templates/ureport/partials/viz/map.html
+++ b/ureport/templates/ureport/partials/viz/map.html
@@ -2,8 +2,7 @@
     <div id="map_{{ poll.pk }}" class="mapmodule init">
     </div>
     <div id="map_layers">
-        <h3>Key</h3>
-        <ul class="key" border=0 style="float:left;max-width:30%;list-style-type:none">
+        <ul class="key">
         </ul>
     </div>
 </div>
