--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,11 +1,34 @@
 {% extends "ureport_layout.html" %}
 
+{% block javascripts %}
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
+    {{ block.super }}
+{% endblock %}
 {% block content %}
 <div id="viz">
 </div>
+<div class="scrolltop">
+<span>PREVIOUS POLLS</span>
+</div>
+<div class="poll_list">
+<ul>
+    {% for p in polls %}
+        <li>
+            <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
+            {{ p.question }}
+            <a href="javascript:void(0)" 
+               onclick="clear_layers();$('#viz').load('{% url ureport.views.best_visualization p.pk %}')">See results</a>
+        </li>
+    {% endfor %}
+</ul>
+</div>
+<div class="scrollbottom">
+&nbsp;
+</div>
 <script language="javascript">
     $(document).ready(function() {
-        $('#viz').load('/bestviz?pks=l&module=true');
+        $('#viz').load('/bestviz?pks=l');
     });
 </script>
 
