--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -220,3 +220,15 @@ body{
 	margin-top:5px;
 	font-size:16px;
 }
+#span_info{
+    float:right;
+    width:60px;
+    margin-right:20px;
+    margin-top:10px;
+
+}
+#span_total{
+    color:#ffffff;
+    font-size:20px;
+
+}
