--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -35,8 +35,8 @@
             <div class="nav-side">
                 <ul>
                 <li><a href="/">HOME</a></li>
-                <li><a href="#">POLL RESULTS</a></li>
-                <li><a href="#">ABOUT UREPORT</a></li>
+                <li><a href="/poll_results">POLL RESULTS</a></li>
+                <li><a href="/about_ureport/">ABOUT UREPORT</a></li>
                 <li><a href="/join/">HOW TO JOIN</a></li>
                 </ul>
             </div>
