--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="about">
-        <h3 class="about_header">About Ureport <img src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
+        <h3 class="about_header">About Ureport <img class="ab_img" src="{{ MEDIA_URL }}ureport/images/shout_out.png"/></h3>
 
         <div class="page">
             <p>
