--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -30,7 +30,8 @@ a {
     padding: 10px;
 }
 .why-join{
-    width:250px;
+    width:200px;
+    padding-top: 5px;
     margin-left: auto;
     margin-right: auto;
 }
