--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -35,11 +35,21 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
-.why-join h3{
+div.why-placeholder{
     background:#fae6d9 url('../images/why_join.png') no-repeat right;
     height: 66px;
     margin-bottom: 2px;
+    margin-top:5px;
 }
+div.why-placeholder span{
+    font-size: 20px;
+    padding-top: 10px;
+    width:85px;
+    height:50px;
+    margin-left:12px;
+    display: block;
+}
+
 .why-join ul{
     margin-top: 0px;
     background-color: #fae6d9;
