looks a little less evil now

--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -3,7 +3,10 @@
 
 {% block sidecontent %}
     <div class="why-join">
-        <h3>Why Join Ureport</h3>
+        <div class="why-placeholder">
+            <span>Why Join Ureport</span>
+        </div>
+
         <ul>
             <li>Speak out on what's happening in your community</li>
             <li>Use Ureport results and information to update and increase citizen's awareness</li>
