--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -44,6 +44,7 @@ div.why-placeholder{
 div.why-placeholder span{
     font-size: 20px;
     padding-top: 10px;
+    color:#07668c;
     width:85px;
     height:50px;
     margin-left:12px;
@@ -54,6 +55,14 @@ div.why-placeholder span{
     margin-top: 0px;
     background-color: #fae6d9;
     padding: 25px;
+}
+.why-join ul li{
+    list-style: square outside;
+    color: #07668c;
+}
+/*for the spanned text*/
+.blacktext{
+    color:black;
 }
 
 .brand {
