--- a/ureport/templates/ureport/about.html
+++ b/ureport/templates/ureport/about.html
@@ -8,10 +8,10 @@
         </div>
 
         <ul>
-            <li>Speak out on what's happening in your community</li>
-            <li>Use Ureport results and information to update and increase citizen's awareness</li>
-            <li>Participate in nationwide campaigns to help improve your country</li>
-            <li>Share what's happening around Uganda with other Ureporters</li>
+            <li><span class="blacktext">Speak out on what's happening in your community</span></li>
+            <li><span class="blacktext">Use Ureport results and information to update and increase citizen's awareness</span></li>
+            <li><span class="blacktext">Participate in nationwide campaigns to help improve your country</span> </li>
+            <li><span class="blacktext">Share what's happening around Uganda with other Ureporters</span></li>
         </ul>
     </div>
 {% endblock %}
