added authenticated links for logged in users

--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -72,12 +72,20 @@
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
                 <ul>
-	                <li class="first"><a href="#">HOME</a></li>
+	                <li class="first"><a href="/">HOME</a></li>
 	                <li><a href="#">POLL RESULTS</a></li>
 	                <li><a href="#">ABOUT UREPORT</a></li>
-	                <li><a href="#">HOW TO JOIN</a></li>
+	                <li><a href="/join/">HOW TO JOIN</a></li>
 	                <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li>
+	                {% if user.is_authenticated %}
+	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
+	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
+	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
+	                {% else %}
+	                   <li><a href="/accounts/login">LOGIN</a></li>
+	                {% endif %}
                 </ul>
 	           </div>
 	           <p>Copyright &copy; 2010 - 2011 UNICEF et al.</p>
