--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -333,7 +333,8 @@ div.why-placeholder span{
     width:350px;
     height:300px;
     float:right;
-    border-bottom: 1px solid  
+    border-bottom: 1px solid #9b9b9b;
+    margin-left:10px;
 }
 
 .step_name
@@ -342,4 +343,9 @@ div.why-placeholder span{
 }
 .step_txt{
     color:#7dafc3;
+}
+.step img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
