awakened some dead links

--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -80,7 +80,7 @@
                 <ul>
 	                <li class="first"><a href="/">HOME</a></li>
 	                <li><a href="#">POLL RESULTS</a></li>
-	                <li><a href="#">ABOUT UREPORT</a></li>
+	                <li><a href="about_ureport">ABOUT UREPORT</a></li>
 	                <li><a href="/join/">HOW TO JOIN</a></li>
 	                <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li>
