formatting fixes, changes to total members and poll results links

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -11,6 +11,7 @@
 <div class="scrolltop">
 <span>PREVIOUS POLLS</span>
 </div>
+<a name="poll_results"></a>
 <div class="poll_list">
 <ul>
     {% for p in polls %}
