--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -22,8 +22,7 @@
             <span class="brand">UReport</span>
             <span class="tagline">VOICE MATTERS</span>
             {% load humanize %}
-            <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> Members to date
-                Join us Now</span>
+            <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> members to date</span>
         </div>
         <div class="content">
             {% block content %}
@@ -35,7 +34,7 @@
             <div class="nav-side">
                 <ul>
                 <li><a href="/">HOME</a></li>
-                <li><a href="/poll_results">POLL RESULTS</a></li>
+                <li><a href="/#poll_results">POLL RESULTS</a></li>
                 <li><a href="/about_ureport/">ABOUT UREPORT</a></li>
                 <li><a href="/join/">HOW TO JOIN</a></li>
                 </ul>
