--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -24,24 +24,42 @@ a {
 	border-bottom: solid 3px #bbd8e7;
 }
 
+#span_info {
+    border-bottom: 1px solid #BBD8E7;
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    padding-bottom: 3px;
+    width: 120px;
+}
+
+#span_total {
+    color: #ffffff;
+    font-size: 32px;
+    font-weight: bold;
+}
+
 .content {
     float: right;
     width: 720px;
     padding: 10px;
 }
+
 .why-join{
     width:200px;
     padding-top: 5px;
     margin-left: auto;
     margin-right: auto;
 }
-div.why-placeholder{
+
+div.why-placeholder {
     background:#fae6d9 url('../images/why_join.png') no-repeat right;
     height: 66px;
     margin-bottom: 2px;
     margin-top:5px;
 }
-div.why-placeholder span{
+
+div.why-placeholder span {
     font-size: 20px;
     padding-top: 10px;
     color:#07668c;
@@ -51,15 +69,17 @@ div.why-placeholder span{
     display: block;
 }
 
-.why-join ul{
+.why-join ul {
     margin-top: 0px;
     background-color: #fae6d9;
     padding: 25px;
 }
-.why-join ul li{
+
+.why-join ul li {
     list-style: square outside;
     color: #07668c;
 }
+
 /*for the spanned text*/
 .blacktext{
     color:black;
@@ -324,18 +344,6 @@ div.why-placeholder span{
 
 .key li {
     padding: 2px;	
-}
-#span_info{
-    float:right;
-    width:60px;
-    margin-right:20px;
-    margin-top:10px;
-
-}
-#span_total{
-    color:#ffffff;
-    font-size:20px;
-
 }
 
 .step{
