--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -23,6 +23,9 @@ a {
 	height:91px;
 	border-bottom: solid 3px #bbd8e7;
 }
+.banner a{
+    text-decoration: none;
+}
 
 .content {
     float: right;
