--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -50,7 +50,7 @@ a {
 
 .why-join{
     width:200px;
-    padding-top: 5px;
+    padding: 5px 10px 10px;
     margin-left: auto;
     margin-right: auto;
 }
