--- a/ureport/templates/ureport/partials/viz/best_visualization.html
+++ b/ureport/templates/ureport/partials/viz/best_visualization.html
@@ -18,7 +18,11 @@ CURRENT POLL
 
 {% else %}
     {% ifequal poll.type 't' %}
-        {% include "/ureport/partials/viz/map.html" %}
+        {% if poll.is_yesno_poll %}
+            {% include "/ureport/partials/viz/choropleth.html" %}
+        {% else %}
+            {% include "/ureport/partials/viz/map.html" %}
+        {% endif %}
         {% include "/ureport/partials/viz/piechart.html" %}
     {% else %}
         {% ifequal poll.type 'n' %}
