--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -1,49 +1,47 @@
-<div id="visual_{{ poll.pk }}">
-    <div id="map_{{ poll.pk }}" class="mapmodule"  >
-    </div>
-    <div id="map_layers">
-        <ul class="key">
-			<li>No (50-60%)
-			   <span style="width: 15px; height: 15px; background-color: #f5cbae; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>No (60-70%)
-			   <span style="width: 15px; height: 15px; background-color: #eba988; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>No (70-80%)
-			   <span style="width: 15px; height: 15px; background-color: #e08465; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>No (80-90%)
-			   <span style="width: 15px; height: 15px; background-color: #d65d45; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>No (90-100%)
-			   <span style="width: 15px; height: 15px; background-color: #c40a0a; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>Yes (50-60%)
-			   <span style="width: 15px; height: 15px; background-color: #aef5cb; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>Yes (60-70%)
-			   <span style="width: 15px; height: 15px; background-color: #88eba9; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>Yes (70-80%)
-			   <span style="width: 15px; height: 15px; background-color: #65e084; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>Yes (80-90%)
-			   <span style="width: 15px; height: 15px; background-color: #45d65d; position: absolute; right: 0px;" class="category"></span>
-			</li>
-			
-			<li>Yes (90-100%)
-			   <span style="width: 15px; height: 15px; background-color: #0ac40a; position: absolute; right: 0px;" class="category"></span>
-			</li>
-        </ul>
-    </div>
+<div id="map_{{ poll.pk }}" class="mapmodule"  >
+</div>
+<div id="map_layers">
+    <ul class="key">
+		<li>No (50-60%)
+		   <span style="width: 15px; height: 15px; background-color: #f5cbae; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>No (60-70%)
+		   <span style="width: 15px; height: 15px; background-color: #eba988; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>No (70-80%)
+		   <span style="width: 15px; height: 15px; background-color: #e08465; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>No (80-90%)
+		   <span style="width: 15px; height: 15px; background-color: #d65d45; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>No (90-100%)
+		   <span style="width: 15px; height: 15px; background-color: #c40a0a; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>Yes (50-60%)
+		   <span style="width: 15px; height: 15px; background-color: #aef5cb; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>Yes (60-70%)
+		   <span style="width: 15px; height: 15px; background-color: #88eba9; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>Yes (70-80%)
+		   <span style="width: 15px; height: 15px; background-color: #65e084; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>Yes (80-90%)
+		   <span style="width: 15px; height: 15px; background-color: #45d65d; position: absolute; right: 0px;" class="category"></span>
+		</li>
+		
+		<li>Yes (90-100%)
+		   <span style="width: 15px; height: 15px; background-color: #0ac40a; position: absolute; right: 0px;" class="category"></span>
+       	</li>
+    </ul>
 </div>
  <script defer="defer" type="text/javascript">
             var map;
@@ -153,9 +151,14 @@
                 document.getElementById('nodelist').innerHTML = response.responseText;
 
             };
-       $(document).ready(function() {
+    $(document).ready(function() {
         init_chmap();
-
+        CATEGORY_COLORS =  {% autoescape off %}{{ colors }}{% endautoescape %};
+        CATEGORY_COLOR_LOOKUP['no'] = '#AA4643';
+        CATEGORY_COLOR_LOOKUP['yes'] = '#89A54E';
+        CATEGORY_COLOR_LOOKUP['unknown'] = '#80699B';
+        CATEGORY_COLOR_LOOKUP['uncategorized'] = '#4572A7';
+        CATEGORY_OFFSET = 4;
     });
 </script>
 
