added no data to key

--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -41,6 +41,9 @@
 		<li>Yes (90-100%)
 		   <span style="width: 15px; height: 15px; background-color: #0ac40a; position: absolute; right: 0px;" class="category"></span>
        	</li>
+        <li>No Data
+           <span style="width: 15px; height: 15px; background-color: blue; position: absolute; right: 0px;" class="category"></span>
+        </li>
     </ul>
 </div>
  <script defer="defer" type="text/javascript">
