--- a/ureport/templates/ureport/partials/viz/best_visualization.html
+++ b/ureport/templates/ureport/partials/viz/best_visualization.html
@@ -22,7 +22,10 @@ CURRENT POLL
 	        {% if poll.is_yesno_poll %}
 	            {% include "/ureport/partials/viz/choropleth.html" %}
 	        {% else %}
-	            {% include "/ureport/partials/viz/map.html" %}
+	            {% include "/ureport/partials/viz/multichoice_choropleth.html" %}
+	            {% comment %}
+	                {% include "/ureport/partials/viz/map.html" %}
+	            {% endcomment %}
 	        {% endif %}
 	        {% include "/ureport/partials/viz/piechart.html" %}
         </div>
