--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -74,7 +74,12 @@
 
 	    <div class="footer">
 	       <div class="sponsors">
-	           Supported by:<img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
+	           Supported by:
+	           <img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/brac_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/cou_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/gem_logo.png"/>
 	       </div>
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
